enemy class and spawning

--- a/style.css
+++ b/style.css
@@ -11,4 +11,10 @@ body {
   border: white solid;
 }
 
+#playerImage,
+#backgroundImage,
+#enemyImage {
+  display: none;
+}
+
 /* MODIFY ends here */
