--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ div {
   position: relative;
   /* display as inline block so the entire container is within the child size i.e. canvas */
   display: inline-block;
+  /* text-align: center; */
 }
 
 #top-banner {
@@ -49,7 +50,8 @@ div {
   right: 0;
   bottom: 0;
   left: 0;
-  display: none;
+  display: flex;
+  font-size: xx-large;
 }
 
 #canvas {
